apps/jenkins/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jenkins.prod.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-jenkins
            port:
              number: 8089
  tls: []
